# voxbloxpy

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  README.md  action.sh  format.sh  mypy.ini  setup.py  wrapper.cpp
.github/workflows/: format.yaml  release.yaml  test.yaml
example/: ground_truth_cylinder.py  incremetal_update.py  real_data.py
example/dataset/: collect.py  download_dataset.sh
example/ros/: .gitignore  download_rosbag.sh  example_node.py  node.py
example/ros/rosbag/: save_rosbag.sh
include/voxblox/: Block.pb.h  Layer.pb.h
python/voxbloxpy/: __init__.py  core.py  ros.py
release/: Dockerfile  check_glibcxx.sh  python_versions.txt
tests/: test_all.py  utils.py
voxblox/: CMakeLists.txt
voxblox/include/voxblox/core/: block.h  block_inl.h  layer.h  layer_inl.h
voxblox/include/voxblox/io/: layer_io_inl.h
voxblox/include/voxblox/simulation/: simulation_world_inl.h
voxblox/src/compiled_proto/: Block.pb.cc  Layer.pb.cc
voxblox/test/: test_layer.cc  test_merge_integration.cc  test_protobuf.cc
wrapper/: wrapper.cpp
